--- a/bundles/parmap/parmap.ml.in
+++ b/bundles/parmap/parmap.ml.in
@@ -11,8 +11,6 @@
 (*  library, see the LICENSE file for more information.                   *)
 (**************************************************************************)
 
-open Stdcompat
-
 module Utils = Parmap_utils
 
 (* OS related constants *)
@@ -104,15 +102,21 @@ let reopen_out outchan path fname =
 
 (* send stdout and stderr to a file to avoid mixing output from different
    cores, if enabled *)
-let redirect ~(path (* = (Printf.sprintf "/tmp/.parmap.%d" (Unix.getpid ())) *))
-      ~id =
+@BEGIN_FROM_4_02_0@
+let[@warning "-16" (*unerasable-optional-argument*)]
+@END_FROM_4_02_0@
+@BEGIN_BEFORE_4_02_0@
+let
+@END_BEFORE_4_02_0@
+  redirect ?(path = (Printf.sprintf "/tmp/.parmap.%d" (Unix.getpid ()))) ~id =
       reopen_out stdout path (Printf.sprintf "stdout.%d" id);
       reopen_out stderr path (Printf.sprintf "stderr.%d" id);;
 
 (* unmarshal from a mmap seen as a bigarray *)
 let unmarshal fd =
- let a =
-   Bytearray.array1_map_file fd Bigarray.char Bigarray.c_layout true (-1) in
+ let a = Stdcompat.(
+   Bigarray.array1_of_genarray @@
+   Parmap_compat.map_file fd Bigarray.char Bigarray.c_layout true [|-1|]) in
  let res = Bytearray.unmarshal a 0 in
  Unix.close fd;
  res
@@ -127,8 +131,9 @@ let unmarshal fd =
     - on Linux kernels, we might allocate a mmapped memory area of huge_size
       and marshal into it directly
 
-      let ba = Bigarray.Array1.map_file
-                 fd Bigarray.char Bigarray.c_layout true huge_size in
+      let ba =
+        Bigarray.array1_of_genarray @@
+        Parmap_compat.map_file fd Bigarray.char Bigarray.c_layout true huge_size in
       ignore(Bytearray.marshal_to_buffer ba 0 v [Marshal.Closures]);
       Unix.close fd
 
@@ -204,10 +209,11 @@ let simplemapper (init:int -> unit) (finalize: unit -> unit) ncores' compute opi
     ln !ncores chunksize;
   (* create descriptors to mmap *)
   let fdarr=Array.init !ncores (fun _ -> Utils.tempfd()) in
+  let statusfdarr=Array.init !ncores (fun _ -> Utils.tempfd()) in
   (* run children *)
   run_many !ncores ~in_subprocess:(fun i ->
     init i;  (* call initialization function *)
-    Stdlib.at_exit finalize; (* register finalization function *)
+    at_exit finalize; (* register finalization function *)
     let lo=i*chunksize in
     let hi=if i = !ncores - 1 then ln - 1 else (i + 1) * chunksize - 1 in
     let exc_handler e j = (* handle an exception at index j *)
@@ -215,15 +221,23 @@ let simplemapper (init:int -> unit) (finalize: unit -> unit) ncores' compute opi
         "error at index j=%d in (%d,%d), chunksize=%d of a total of \
          %d got exception %s on core %d \n%!"
         j lo hi chunksize (hi-lo+1) (Printexc.to_string e) i;
+      marshal statusfdarr.(i) false;
       exit 1
     in
     let v = compute al lo hi opid exc_handler in
+    marshal statusfdarr.(i) true;
     marshal fdarr.(i) v);
   (* read in all data *)
   let res = ref [] in
+  let success = ref true in
+  (* check whether an exception has been raised in the subprocesses *)
+  for i = 0 to !ncores - 1 do
+    success:= !success && ((unmarshal statusfdarr.(i)):bool);
+  done;
+  if not !success then failwith "Aborting computation due to exception(s) raised in the workers";
   (* iterate in reverse order, to accumulate in the right order *)
   for i = 0 to !ncores - 1 do
-      res:= ((unmarshal fdarr.((!ncores-1)-i)):'d)::!res;
+    res:= ((unmarshal fdarr.((!ncores-1)-i)):'d)::!res;
   done;
   (* collect all results *)
   collect !res
@@ -243,7 +257,7 @@ let simpleiter init finalize ncores' compute al =
   (* run children *)
   run_many !ncores ~in_subprocess:(fun i ->
     init i;  (* call initialization function *)
-    Stdlib.at_exit finalize; (* register finalization function *)
+    at_exit finalize; (* register finalization function *)
     let lo=i*chunksize in
     let hi=if i= !ncores - 1 then ln-1 else (i+1)*chunksize-1 in
     let exc_handler e j = (* handle an exception at index j *)
@@ -319,7 +333,7 @@ let mapper (init:int -> unit) (finalize:unit -> unit) ncores' ~chunksize compute
        let pids =
          spawn_many !ncores ~in_subprocess:(fun i ->
 	   init i; (* call initialization function *)
-	   Stdlib.at_exit finalize; (* register finalization function *)
+	   at_exit finalize; (* register finalization function *)
            let d=Unix.gettimeofday()  in
            (* primitives for communication *)
            Unix.close pipeup_rd;
@@ -391,6 +405,8 @@ let mapper (init:int -> unit) (finalize:unit -> unit) ncores' ~chunksize compute
        for i = 0 to !ncores-1 do
          res:= ((unmarshal fdarr.((!ncores-1)-i)):'d)::!res;
        done;
+       (* close read pipe end *)
+       Unix.close pipeup_rd;
        (* collect all results *)
        collect !res
   end
@@ -420,7 +436,7 @@ let geniter init finalize ncores' ~chunksize compute al =
        let pids =
          spawn_many !ncores ~in_subprocess:(fun i ->
 	   init i; (* call initialization function *)
-	   Stdlib.at_exit finalize; (* register finalization function *)
+	   at_exit finalize; (* register finalization function *)
            let d=Unix.gettimeofday()  in
            (* primitives for communication *)
            Unix.close pipeup_rd;
@@ -525,34 +541,6 @@ let parmapfold
     (concat:'c->'c->'c) : 'c=
   parmapifold ~init ~finalize ?ncores ?chunksize (fun _ x -> f x) s op opid concat
 
-(* the parallel map function *)
-
-let parmapi
-    ?(init = fun _ -> ())
-    ?(finalize = fun () -> ())
-    ?(ncores= !default_ncores)
-    ?chunksize
-    (f:int ->'a -> 'b)
-    (s:'a sequence) : 'b list=
-  (* enforce array to speed up access to the list elements *)
-  let al = match s with A al -> al | L l  -> Array.of_list l in
-  let compute al lo hi previous exc_handler =
-    (* iterate in reverse order, to accumulate in the right order,
-       and add to acc *)
-    let f' j =
-      try let idx = lo+j in f idx (Array.unsafe_get al idx)
-      with e -> exc_handler e j in
-    let rec aux acc =
-      function
-	  0 ->  (f' 0)::acc
-	| n ->  aux ((f' n)::acc) (n-1)
-    in aux previous (hi-lo)
-  in
-  mapper init finalize ncores ~chunksize compute [] al  (fun r -> Utils.concat_tr r)
-
-let parmap ?init ?finalize ?ncores ?chunksize (f:'a -> 'b) (s:'a sequence) : 'b list=
-    parmapi ?init ?finalize ?ncores ?chunksize (fun _ x -> f x) s
-
 (* the parallel fold function *)
 
 let parfold
@@ -566,7 +554,7 @@ let parfold
     (concat:'b->'b->'b) : 'b=
     parmapfold ~init ~finalize ~ncores ?chunksize (fun x -> x) s op opid concat
 
-(* the parallel map function, on arrays *)
+(* the parallel map function *)
 
 let mapi_range lo hi (f:int -> 'a -> 'b) a =
   let l = hi-lo in
@@ -579,23 +567,95 @@ let mapi_range lo hi (f:int -> 'a -> 'b) a =
     r
   end
 
+
+(* the parallel map function, on arrays *)
+
 let array_parmapi
     ?(init = fun _ -> ())
     ?(finalize = fun () -> ())
     ?(ncores= !default_ncores)
     ?chunksize
+    ?(keeporder=false)
     (f:int -> 'a -> 'b)
     (al:'a array) : 'b array=
-  let compute a lo hi previous exc_handler =
+  (* compute, collect and opid definitions for reordering after load balancing *)
+  let compute_sorted a lo hi previous exc_handler =
+    try
+      (lo,mapi_range lo hi f a)::previous
+    with e -> exc_handler e lo
+  and collect_sorted (r:(int * 'b array) list list) =
+    let fragments = List.flatten r in
+    let ordered=List.map snd (List.stable_sort (fun (n,_) (m,_) -> n-m) fragments) in
+    Array.concat ordered
+  and opid_sorted = [(0,[||])]
+  (* compute, collect and opid definitions without reordering *)
+  and compute a lo hi previous exc_handler =
     try
       Array.concat [(mapi_range lo hi f a);previous]
     with e -> exc_handler e lo
-  in
-  mapper init finalize ncores ~chunksize compute [||] al  (fun r -> Array.concat r)
+  and collect r = Array.concat r
+  and opid = [||] in
+  let ln = Array.length al in
+  match keeporder, chunksize with
+  | _ , None ->
+      (* no need of load balancing *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | _ , Some v when ncores >= ln/v ->
+      (* no need of load balancing if more cores than tasks *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | false , Some _ ->
+      (* load balancing without reordering *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | true , Some _ ->
+      (* load balancing with reordering *)
+      mapper init finalize ncores ~chunksize compute_sorted opid_sorted al collect_sorted
 
-let array_parmap ?init ?finalize ?ncores ?chunksize (f:'a -> 'b) (al:'a array) : 'b array=
-  array_parmapi ?init ?finalize ?ncores ?chunksize (fun _ x -> f x) al
+let array_parmap ?init ?finalize ?ncores ?chunksize ?keeporder (f:'a -> 'b) (al:'a array) : 'b array=
+  array_parmapi ?init ?finalize ?ncores ?chunksize ?keeporder (fun _ x -> f x) al
 
+let parmapi
+    ?(init = fun _ -> ())
+    ?(finalize = fun () -> ())
+    ?(ncores= !default_ncores)
+    ?chunksize
+    ?(keeporder=false)
+    (f:int ->'a -> 'b)
+    (s:'a sequence) : 'b list=
+  (* enforce array to speed up access to the list elements *)
+  let al = match s with A al -> al | L l  -> Array.of_list l in
+  (* compute, collect and opid definitions without reordering *)
+  let compute al lo hi previous exc_handler =
+    (* iterate in reverse order, to accumulate in the right order,
+       and add to acc *)
+    let f' j =
+      try let idx = lo+j in f idx (Array.unsafe_get al idx)
+      with e -> exc_handler e j in
+    let rec aux acc =
+      function
+	  0 ->  (f' 0)::acc
+	| n ->  aux ((f' n)::acc) (n-1)
+    in aux previous (hi-lo)
+  and collect r = Utils.concat_tr r
+  and opid = [] in
+  let ln = Array.length al in
+  match keeporder, chunksize with
+    _ , None ->
+      (* no need of load balancing *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | _ , Some v when ncores >= ln/v ->
+      (* no need of load balancing if more cores than tasks *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | false , Some _ ->
+      (* load balancing without reordering *)
+      mapper init finalize ncores ~chunksize compute opid al collect
+  | true , Some _ ->
+      (* load balancing with reordering *)
+      Array.to_list (array_parmapi ~init ~finalize ~ncores ?chunksize ~keeporder f al)
+
+let parmap ?init ?finalize ?ncores ?chunksize ?keeporder (f:'a -> 'b) (s:'a sequence) : 'b list=
+    parmapi ?init ?finalize ?ncores ?chunksize ?keeporder (fun _ x -> f x) s
+
+    
 (* This code is highly optimised for operations on float arrays:
 
    - knowing in advance the size of the result allows to
@@ -626,8 +686,9 @@ type buf=
 let init_shared_buffer a =
   let size = Array.length a in
   let fd = Utils.tempfd() in
-  let arr =
-    Bytearray.array1_map_file fd Bigarray.float64 Bigarray.c_layout true size in
+  let arr = Stdcompat.(
+    Bigarray.array1_of_genarray @@
+    Parmap_compat.map_file fd Bigarray.float64 Bigarray.c_layout true [|size|]) in
 
   (* The mmap() function shall add an extra reference to the file associated
      with the file descriptor fildes which is not removed by a subsequent
@@ -663,11 +724,11 @@ let array_float_parmapi
       array: the data in Bigarray is placed at offset 1 w.r.t. a normal array,
       so we get a pointer to that zone into arr_out_as_array, and have it typed
       as a float array *)
-   let barr_out_as_array = Array.unsafe_get (Obj.magic barr_out) 1 in
+   (*let barr_out_as_array = Array.unsafe_get (Obj.magic barr_out) 1 in*)
    let compute _ lo hi _ exc_handler =
      try
        for i=lo to hi do
-         Array.unsafe_set barr_out_as_array i (f i (Array.unsafe_get al i))
+         Bigarray.Array1.unsafe_set barr_out i (f i (Array.unsafe_get al i))
        done
      with e -> exc_handler e lo
    in
