--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -67,6 +67,7 @@ clean:
 		$(patsubst %,$(SRC_DIR)/dll%_stubs.so,$(LIBRARY)) \
 		$(patsubst %,$(SRC_DIR)/%.a,$(LIBRARY)) \
 		$(patsubst %,$(SRC_DIR)/lib%_stubs.a,$(LIBRARY)) \
+		$(patsubst %,$(SRC_DIR)/%_stubs.o,$(C_OBJS)) \
 		$(patsubst %,$(SRC_DIR)/%.o,$(MODULES)) \
 		$(patsubst %,$(SRC_DIR)/%.cmi,$(MODULES)) \
 		$(patsubst %,$(SRC_DIR)/%.cmx,$(MODULES)) \
