--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,10 @@
 #   menhir and pyml. It is worth noticing that this building use implicitly
 #   the cached container with pyml built on the previous stage.
 
+# We begin by trace-cmd because the triggered pipeline will be run in parallel.
+
 stages:
+  - trace-cmd
   - prepare distribution images
   - prepare environment images
   - prepare image with all dependencies
@@ -221,51 +224,26 @@ push reference scores:
         git push
       || true
 
-variables:
-  CI_TEMPLATE_REGISTRY_HOST: registry.gitlab.inria.fr
-  TF_STATE_NAME: pipeline-${CI_PIPELINE_ID}
-  TF_ROOT: ${CI_PROJECT_DIR}/ci
-  TF_VAR_CI_PIPELINE_ID: ${CI_PIPELINE_ID}
-
-trace-cmd-create-runner:
-  image: "$CI_TEMPLATE_REGISTRY_HOST/gitlab-org/terraform-images/releases/1.1:v0.43.0"
-  needs: []
+trace-cmd-check-changed:
+  stage: trace-cmd
+  image: "registry.gitlab.inria.fr/inria-ci/docker/python3-cloudstack"
   tags:
     - linux
     - small
+  rules:
+    - if: $CLOUDSTACK_API_KEY
   script:
-    - cd "${TF_ROOT}"
-    - cp $SSH_PRIVATE_KEY id_rsa
-    - gitlab-terraform plan -var runner_count=1
-    - gitlab-terraform apply
-
-trace-cmd-build-and-test:
-  needs: [trace-cmd-create-runner]
-  tags:
-    - terraform
-  script:
-    - sudo apt-get update
-    - sudo apt-get install --yes autoconf automake unzip aspcud opam trace-cmd rsync git mercurial darcs build-essential sudo vim curl libpython3-dev
-    - opam init --auto-setup
-    - opam switch create 5.0.0
-    - opam install --yes ocamlfind stdcompat pyml menhir parmap
-    - sudo trace-cmd start -p function_graph
-    - eval $(opam env) && ./autogen && ./configure && make
-    - ./spatch.opt --batch_mode -testall
-    - sudo trace-cmd extract
+    - cd ci/trace-cmd
+    - python3 check-template-changed.py > ../../trace-cmd-config.yml
   artifacts:
-    paths:
-      - trace.dat
+    paths: [trace-cmd-config.yml]
 
-trace-cmd-clean:
-  image: "$CI_TEMPLATE_REGISTRY_HOST/gitlab-org/terraform-images/releases/1.1:v0.43.0"
-  needs: [trace-cmd-build-and-test]
-  tags:
-    - linux
-    - small
-  script:
-    - cd "${TF_ROOT}"
-    - cp $SSH_PRIVATE_KEY id_rsa
-    - gitlab-terraform plan -var runner_count=0
-    - gitlab-terraform apply
-  when: always
+trace-cmd:
+  stage: trace-cmd
+  needs: [trace-cmd-check-changed]
+  rules:
+    - if: $CLOUDSTACK_API_KEY
+  trigger:
+    include:
+      - artifact: trace-cmd-config.yml
+        job: trace-cmd-check-changed
