--- a/ci/trace-cmd/pipeline.yml
+++ b/ci/trace-cmd/pipeline.yml
@@ -60,7 +60,7 @@ build-and-test:
   extends: .runner-tags
   stage: build-and-test
   script:
-    - sudo trace-cmd start -p function_graph
+    - sudo trace-cmd start -e sched -v -e sched_stat_runtime
     - eval $(opam env) && ./autogen && ./configure && make
     - ./spatch.opt --batch_mode -testall
     - sudo trace-cmd extract
