Install AppStream metadata file
https://en.wikipedia.org/wiki/AppStream

AppStream a standard metadata format for describing a software project.
It contains items such as textual description, categories, authors, links
and information about releases. It is mainly used by Linux package managers.
Notably, it is required to submit the project to Flathub repository.

It is preferred to ship the AppStream upstream so that other distributions can use it:
https://docs.flathub.org/docs/for-app-authors/requirements#acceptable-but-should-be-submitted-upstream

Signed-off-by: Jan Tojnar <jtojnar@gmail.com>

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -102,6 +102,7 @@ MANDIR=${mandir}
 LIBDIR=@LIBDIR@
 
 BASH_COMPLETION_DIR=@BASH_COMPLETION_DIR@
+METAINFO_DIR=@METAINFO_DIR@
 
 # selected libraries
 FEATURE_menhirLib=@FEATURE_menhirLib@
