trying to use Cmi_format
Cmi_format allows cleanly parsing mli files

Using it requires ocamlcommon, which also contains a module
called config.  Therefore our module globals/config is
renamed globals/cocciconfig.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ Makefile.local
 result
 setup/Makefile.in
 
-globals/config.ml
+globals/cocciconfig.ml
 python/pycocci.ml
 commons/commands.ml
 globals/regexp.ml
