--- a/coccinelle.opam
+++ b/coccinelle.opam
@@ -1,7 +1,7 @@
 opam-version: "2.0"
 authors: "Julia Lawall et. al."
 maintainer: "Thierry.Martinez@inria.fr"
-bug-reports: "cocci@systeme.lip6.fr"
+bug-reports: "cocci@inria.fr"
 homepage: "http://coccinelle.lip6.fr/"
 dev-repo: "git://github.com/coccinelle/coccinelle"
 license: "GPL"
